src/test/contracts/negative/pattern_matching_anomalies/missing_cases/c_t_c.mligo
type p = Four | Five | Six
type t = One of (int * p) | Two | Three

let s (x : t) = 
  match x with
    One (n, Six) -> ()
  | Two          -> ()
  | Three        -> ()